snl_compiler/tests/fixtures/syntax_errors/missing_endwh.snl
{错误5: while 循环缺少 endwh}
program p
var
    integer x;
begin
    while x < 10 do
        x := x + 1
end.
